WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284998
Fix the build for some internal configurations
https://bugs.webkit.org/show_bug.cgi?id=284998
Summary
Fix the build for some internal configurations
Richard Robinson
Reported
2024-12-19 17:52:17 PST
rdar://140412673
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-12-19 17:59:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38248
EWS
Comment 2
2024-12-20 12:50:01 PST
Committed
288184@main
(fe1d29be3db2): <
https://commits.webkit.org/288184@main
> Reviewed commits have been landed. Closing PR #38248 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug