Fix the build for some internal configurations https://bugs.webkit.org/show_bug.cgi?id=284998 rdar://140412673

Reviewed by Abrar Rahman Protyasha.

Fix a build dependency order issue by using a temporary workaround until it is no longer needed.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfiguration.h:

Canonical link: https://commits.webkit.org/288184@main